# cs2-client

./: .gitignore  CMakeLists.txt  ak47_logs.md  awp_logs.md  build_output.txt  client_latest.json  dbgbomb.cpp  fix_esp.js  offsets_latest.json  other_posts.cpp  patch_menu.js  prediction.cpp  replace_esp.js
PooDriver/: driver.c  driver_identity.h
cmake/: driver_identity.h.in
cs2-external-esp-main/src/gui/frontend/overlays/: Overlays.cpp
cs2-external-esp-main/src/gui/renderer/window/: Window.cpp
lineups/: de_mirage_sample.json
loader/: CMakeLists.txt
loader/csharp/Crymore.Loader/: App.xaml  App.xaml.cs  Crymore.Loader.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
loader/csharp/Crymore.Loader/Controls/: RingProgress.xaml  RingProgress.xaml.cs
loader/csharp/Crymore.Loader/Helpers/: AssetLoader.cs  AvatarLoader.cs  DebugLog.cs  EnvMessage.cs  LoginSettings.cs  ResourceImages.cs  UpdateLog.cs
loader/csharp/Crymore.Loader/Models/: LoaderState.cs
loader/csharp/Crymore.Loader/Services/: CoreBridge.cs
loader/csharp/Crymore.Loader/Theme/: Colors.xaml  Styles.xaml
loader/include/: auth.h  crymore_core.h  debug_log.h  env_check.h  launch_handshake.h  loader_app.h  loader_font.h  loader_theme.h  loader_ui.h  log_sanitize.h  payload.h  payload_crypto.h  protect.h  sharp_dx11.h  steam_launch.h  texture_util.h  ui.h  ui_state.h
loader/resources/: app.js  index.html  loader.rc
loader/src/: auth.cpp  crymore_core.cpp  debug_log.cpp  env_check.cpp  launch_handshake.cpp  loader_app.cpp  loader_config.cpp  loader_font.cpp  loader_ui.cpp  log_sanitize.cpp  main.cpp  payload.cpp  payload_crypto.cpp  protect.cpp  sharp_dx11.cpp  steam_launch.cpp  texture_util.cpp  ui.cpp
loader/tools/: SHIP.md  build_embedded_payload.ps1  build_kernel_driver.ps1  build_phys_extract.ps1  build_ship.ps1  copy_csgo_fonts.ps1  encrypt_payload.ps1  generate_app_icon.ps1  pack_payload.ps1  write_build_version.ps1  write_empty_payload.ps1
loader/tools/PayloadEncrypt/: Program.cs
loader/web/: style.css
meshes/: chicken.glb  ctm_diver_varianta.glb  ctm_diver_variantb.glb  ctm_diver_variantc.glb  ctm_fbi.glb  ctm_fbi_varianta.glb  ctm_fbi_variantb.glb  ctm_fbi_variantc.glb  ctm_fbi_variantd.glb  ctm_fbi_variante.glb  ctm_fbi_variantf.glb  ctm_fbi_variantg.glb  ctm_fbi_varianth.glb  ctm_gendarmerie_varianta.glb  ctm_gendarmerie_variantb.glb  ctm_gendarmerie_variantc.glb  ctm_gendarmerie_variantd.glb  ctm_gendarmerie_variante.glb  ctm_sas.glb  ctm_sas_variantf.glb  ctm_sas_variantg.glb  ctm_st6_variante.glb  ctm_st6_variantg.glb  ctm_st6_varianti.glb  ctm_st6_variantj.glb  ctm_st6_variantk.glb  ctm_st6_variantl.glb  ctm_st6_variantm.glb  ctm_st6_variantn.glb  defuser.glb  hostage.glb  tm_balkan_variantf.glb  tm_balkan_variantg.glb  tm_balkan_varianth.glb  tm_balkan_varianti.glb  tm_balkan_variantj.glb  tm_balkan_variantk.glb  tm_balkan_variantl.glb  tm_jungle_raider_varianta.glb  tm_jungle_raider_variantb.glb  (+100 more)
src/: config.cpp  config.h  main.cpp  str_obf.h
src/analytics/: match_intel.cpp  match_intel.h  player_scout.cpp  player_scout.h
src/bsp/: bsp_world.cpp  bsp_world.h
src/cloud/: cloud_api.cpp  cloud_api.h
src/debug/: logger.h
src/esp/: chams_mesh.cpp  chams_mesh.h  chams_skinning.cpp  chams_skinning.h  esp_renderer.cpp  esp_renderer.h  grenade_helper.cpp  grenade_helper.h  sound_esp.cpp  sound_esp.h
src/game/: aim_assist.cpp  aim_assist.h  aim_style.cpp  aim_style.h  bone_layout.h  cs2_bones.cpp  cs2_bones.h  cs2_model.cpp  cs2_model.h  entity_manager.cpp  entity_manager.h  game_sensitivity.h  game_trace.cpp  game_trace.h  grenade.h  grenade_lineup.cpp  grenade_lineup.h  pawn_services.h  player.h  triggerbot.cpp  triggerbot.h  weapon_group.cpp  weapon_group.h
src/gui/: font.cpp  font.h  gui.cpp  gui.h  icons.cpp  icons.h
src/input/: input_router.cpp  input_router.h
src/math/: bone_matrix.h  matrix.h  vector.h
src/memory/: driver_manager.cpp  driver_manager.h  driver_shared.h  kernel_memory.cpp  kernel_memory.h  pattern_scan.cpp  pattern_scan.h  process.cpp  process.h  rpm.h
src/menu/: menu.backup.cpp  menu.backup.h  menu.cpp  menu.h  web_server.cpp  web_server.h
src/offsets/: netvars.h  offsets.cpp  offsets.h
src/overlay/: overlay_metrics.cpp  overlay_metrics.h  renderer.cpp  renderer.h  window.cpp  window.h
src/profile/: user_profile.cpp  user_profile.h
src/steam/: steam_avatars.cpp  steam_avatars.h
src/web/: web_radar_publisher.cpp  web_radar_publisher.h
web/: .dev.vars.example  DEPLOY.md  package-lock.json  package.json  schema-migrate-avatar.sql  schema-migrate-cloud.sql  schema-migrate-overlay.sql  schema.sql  wrangler.toml
web/public/: app.js  dashboard.html  index.html  login.html  register.html  style.css
web/scripts/: load_publish_env.ps1  pack_loader.ps1  publish_loader.ps1
web/src/: index.ts  types.ts
web/src/lib/: db.ts  jwt.ts  r2_presign.ts  session_crypto.ts  util.ts
web/src/routes/: admin.ts  auth.ts  configs.ts  downloads.ts  lineups.ts  profile.ts  subscription.ts
